# SatIO_Core

./: CMakeLists.txt  DEVLOG.txt  README.md  SiderealObjects.cpp  SiderealObjects.h  SiderealObjectsTables.cpp  SiderealObjectsTables.h  SiderealPlanets.cpp  SiderealPlanets.h  UnidentifiedStudios_AstroClock.cpp  UnidentifiedStudios_AstroClock.h  UnidentifiedStudios_CMD.cpp  UnidentifiedStudios_CMD.h  UnidentifiedStudios_CelestialSphere.cpp  UnidentifiedStudios_CelestialSphere.h  UnidentifiedStudios_Config.cpp  UnidentifiedStudios_Config.h  UnidentifiedStudios_GPIOPortExpander.cpp  UnidentifiedStudios_GPIOPortExpander.h  UnidentifiedStudios_GlobalLVGL.cpp  UnidentifiedStudios_GlobalLVGL.h  UnidentifiedStudios_HexToDig.cpp  UnidentifiedStudios_I2C.cpp  UnidentifiedStudios_I2C.h  UnidentifiedStudios_INS.h  UnidentifiedStudios_LMST.cpp  UnidentifiedStudios_LMST.h  UnidentifiedStudios_Matrix.cpp  UnidentifiedStudios_Matrix.h  UnidentifiedStudios_Meteors.cpp  UnidentifiedStudios_Multiplexers.cpp  UnidentifiedStudios_ObjectTypeIcons.cpp  UnidentifiedStudios_ObjectTypeIcons.h  UnidentifiedStudios_SatIO.cpp  UnidentifiedStudios_SatIO.h  UnidentifiedStudios_SatIOFile.cpp  UnidentifiedStudios_SatIOFile.h  UnidentifiedStudios_SatIOLVGL.cpp  UnidentifiedStudios_SatIOLVGL.h  UnidentifiedStudios_SdCardHelper.cpp  (+12 more)
main/: CMakeLists.txt  README.md  UnidentifiedStudios_ArgParser.cpp  UnidentifiedStudios_ArgParser.h  UnidentifiedStudios_AstroClock.cpp  UnidentifiedStudios_CMD.cpp  UnidentifiedStudios_CMD.h  UnidentifiedStudios_Config.cpp  UnidentifiedStudios_Config.h  UnidentifiedStudios_GPIOPortExpander.cpp  UnidentifiedStudios_GPIOPortExpander.h  UnidentifiedStudios_HexToDig.h  UnidentifiedStudios_INS.cpp  UnidentifiedStudios_INS.h  UnidentifiedStudios_LMST.cpp  UnidentifiedStudios_Mapping.cpp  UnidentifiedStudios_Mapping.h  UnidentifiedStudios_Matrix.cpp  UnidentifiedStudios_Matrix.h  UnidentifiedStudios_SatIO.h  (+24 more)
(+21 files in other folders)
